--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "my-cra-template",
   "version": "0.1.0",
   "private": true,
+  "resolve": {
+    "fallback": {
+      "os": false
+    }
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -11,10 +16,10 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "antd": "^4.21.7",
-    "dotenv": "^16.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-select-async-paginate": "^0.6.2",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
